# Polytech-Schedule-tg-bot

./: .dockerignore  .env.dist  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
buildfiles/: Dockerfile
migrations/: env.py
migrations/versions/: e6e41e232edf_initial.py
src/: configuration.py
src/bot/: __main__.py  dispatcher.py
src/bot/filters/: __init__.py  correct_group_format.py  existing_group.py  existing_institute.py  register_filter.py
src/bot/legacy/: User.py  business_config.py  handlers.py  keyboards.py  parser_methods.py  texts.py
src/bot/logic/: __init__.py  get_schedule.py  help.py  info.py  start.py  unknown_msg.py
src/bot/middlewares/: __init__.py  database_mw.py  is_register_mw.py
src/bot/structures/: __init__.py  data_structure.py  lexicon.py  message_texts.py  texts.py
src/db/: database.py
src/db/models/: __init__.py  user.py
src/db/repositories/: __init__.py  abstract.py  chat.py  user.py
src/parser/: __init__.py  business_config.py  data2text_methods.py  data_mining_methods.py  parser_methods.py  parsing_methods.py  updating_data.py
src/parser/data/: faculty_100_data.json  faculty_101_data.json  faculty_111_data.json  faculty_119_data.json  faculty_120_data.json  faculty_121_data.json  faculty_122_data.json  faculty_123_data.json  faculty_124_data.json  faculty_125_data.json  faculty_92_data.json  faculty_93_data.json  faculty_94_data.json  faculty_95_data.json  institutes_data.json
src/utils/: __init__.py  date_to_str.py
(+12 files in other folders)
