[tool.poetry]
name = "polytech-schedule-tg-bot"
version = "0.1.0"
description = ""
authors = ["Ivan Simonenko <simonenkoivansimon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
requests = "^2.31.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
